# kvh_geo_fog_3d

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  Dockerfile_GitlabRunner  Jenkinsfile  LICENSE  PACKAGING.md  README.md  build_all_debs.sh  build_deb.sh  clang_tidy.sh  clean_all_debs.sh  nodelet_plugins.xml  package.xml  release.sh  ros-kinetic-kvh-geo-fog-3d-driver_1.1.0-0xenial_amd64.deb  tracks.yaml
calculations/: BaudRate.ods
devops/: clang_tidy.sh  cppcheck.sh  functions.sh  roslint.sh  statick.sh
devops/statick_config/rsc/: exceptions.yaml  kvh_geo_fog_3d-config.yaml  kvh_geo_fog_3d-profile.yaml
doc/driver/: manifest.yaml
doc/rviz/: manifest.yaml
docker/: Dockerfile  ros_entrypoint.sh
docker_container_extras/: MITRE BA NPE CA-3.crt  MITRE BA NPE CA-4.crt  MITRE BA ROOT.crt  etc_default_keyboard  etc_sudoers_envkeepfix.sh
docs/: README.md
include/: kvh_diagnostics_container.hpp  kvh_geo_fog_3d_device_configuration.hpp  kvh_geo_fog_3d_driver.hpp  kvh_geo_fog_3d_global_vars.hpp  kvh_geo_fog_3d_packet_storage.hpp
kvh_geo_fog_3d/: CHANGELOG.rst  package.xml
kvh_geo_fog_3d_driver/: .gitignore  CHANGELOG.rst  CMakeLists.txt  Doxyfile  README.md  build_deb.sh  clean_deb.sh  mainpage.dox  manifest.html  package.xml  rosdoc.yaml
kvh_geo_fog_3d_driver/config/: ukf_template_odom.yaml
kvh_geo_fog_3d_driver/images/: findkvh
kvh_geo_fog_3d_driver/include/: kvh_diagnostics_container.hpp  kvh_geo_fog_3d_device_configuration.hpp  kvh_geo_fog_3d_driver.hpp  kvh_geo_fog_3d_global_vars.hpp  kvh_geo_fog_3d_nodelet.hpp  kvh_geo_fog_3d_packet_storage.hpp  packet_publisher.hpp
kvh_geo_fog_3d_driver/launch/: determine_baud.launch  kvh_geo_fog_3d_node.launch  static_broadcaster_example.launch
kvh_geo_fog_3d_driver/src/: kvh_diagnostics_container.cpp  kvh_geo_fog_3d_node.cpp  kvh_geo_fog_3d_nodelet.cpp  packet_publisher.cpp
kvh_geo_fog_3d_driver/src/kvh_driver/: decode_packets.cpp  device_configuration.cpp  driver_main.cpp  kvh_global_vars.cpp  packet_storage.cpp
kvh_geo_fog_3d_driver/src/utility/: determine_baud_node.cpp
kvh_geo_fog_3d_driver/test/: device_configuration_test.cpp  init_vars.cpp  kvh_driver_test.cpp  packet_storage_test.cpp
kvh_geo_fog_3d_driver/test/include/: init_vars.hpp
kvh_geo_fog_3d_msgs/: .gitignore  CHANGELOG.rst  build_deb.sh  clean_deb.sh  package.xml
kvh_geo_fog_3d_msgs/msg/: KvhGeoFog3DRawGNSS.msg
kvh_geo_fog_3d_rviz/: CHANGELOG.rst  CMakeLists.txt  clean_deb.sh  package.xml  plugin_description.xml
kvh_geo_fog_3d_rviz/include/: kvh_geo_fog_3d_status_panel.hpp  kvh_status_painter.hpp
kvh_geo_fog_3d_rviz/packaging/: fix_rules.sh
kvh_geo_fog_3d_rviz/src/: kvh_geo_fog_3d_status_panel.cpp  kvh_status_painter.cpp
launch/: kvh_geo_fog_3d_node.launch  kvh_geo_fog_3d_nodelet.launch  kvh_robot_loc.launch
msg/: KvhGeoFog3DDetailSatellites.msg  KvhGeoFog3DSatellites.msg  KvhGeoFog3DSystemState.msg  KvhGeoFog3DSystemStatus.msg  KvhGeoFog3DUTMPosition.msg
packaging/: release.sh
params/: ukf_template_gps.yaml  ukf_template_odom.yaml
scripts/: disable_debug.sh  enable_debug.sh
src/: kvh_diagnostics_container.cpp  kvh_geo_fog_3d_driver.cpp  kvh_geo_fog_3d_node.cpp  kvh_geo_fog_3d_nodelet.cpp
src/kvh_driver/: device_configuration.cpp
src/utility/: determine_baud_node.cpp
test/: packet_storage_test.cpp
