<?xml version="1.0"?>
<package format="2">
  <name>kvh_geo_fog_3d</name>
  <version>1.0.0</version>
  <description>Provides a driver node for KVH GEO FOG 3D INS sensors, messages, and rviz plugins.</description>
  <author email="zlacelle@mitre.org">Zach LaCelle</author>
  <maintainer email="zlacelle@mitre.org">Zach LaCelle</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc external="http://www.kvh.com/admin/products/gyros-imus-inss/ins/geo-fog-3d-dual/commercial-geo-fog-3d-dual/"/>
    <metapackage />
  </export>
</package>
