<?xml version="1.0"?>

<!--
Copyright (c) 2019, The MITRE Corporation
All rights reserved.

Sections of this project contains content developed by The MITRE Corporation.
If this code is used in a deployment or embedded within another project,
it is requested that you send an email to opensource@mitre.org in order to
let us know where this software is being used.
-->

<package format="2">
  <name>kvh_geo_fog_3d_rviz</name>
  <version>1.2.0</version>
  <description>The KVH GEO FOG 3D rviz plugin package</description>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="zlacelle@mitre.org">Zach LaCelle</author>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="zlacelle@mitre.org">Zach LaCelle</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Proprietary</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/ublox_rviz</url> -->

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kvh_geo_fog_3d_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>kvh_geo_fog_3d_msgs</build_export_depend>
  <exec_depend>kvh_geo_fog_3d_msgs</exec_depend>
  <exec_depend>rviz</exec_depend> <!-- If you don't have this, the plugin will silently fail to load in rviz!! #feature -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>
